/**
 * SwingButton
 */
public class SwingButton implements Button {

}