/**
 * Edit
 */
public interface Edit {

}