/**
 * SwingEdit
 */
public class SwingEdit implements Edit {

}