/**
 * SwtLabel
 */
public class SwtLabel implements Label {

}